discussion/kv_engine/126160/126160_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for magma GetDocs API

Change-Id: Iff70f5b8a40f00b2cf824152d0216207e2ed7ca0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-20 21:42:55.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 22:12:25.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27636/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(864): error C2039: "OperationsList": is not a member of "magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27636/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1806/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:41: error: unknown template name "OperationsList" [clang-diagnostic-error]
class GetOperationsList : public magma::OperationsList<Magma::GetOperation> {};
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:878:16: error: no member named "Add" in "GetOperationsList" [clang-diagnostic-error]
        getOps.Add(op);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:932:46: error: non-const lvalue reference to type "std::vector<GetOperation>" cannot bind to a value of unrelated type "GetOperationsList" [clang-diagnostic-error]
    auto status = magma->GetDocs(vbid.get(), getOps, cb);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:714:47: note: passing argument to parameter "getOps" here
                   std::vector<GetOperation>& getOps,
                                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1806/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:41:
error: unknown template name "OperationsList" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1806/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23635/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:41:
error: unknown template name "OperationsList"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23635/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2286/ : FAILURE

Compile error at [2020-04-20T21:44:46.523Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:41:
error: unknown template name "OperationsList"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2286/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3241/ : FAILURE

Compile error at [2020-04-20T21:54:26.507Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:55:
error: expected template-name before ?<? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3241/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3302/ : FAILURE

Compile error at [2020-04-20T21:45:31.240Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:55:
error: expected template-name before ?<? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3302/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11092/ : FAILURE

Compile error at [2020-04-20T21:49:02.938Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:55:
error: expected template-name before ?<? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11092/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/325/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3224/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
